oss-knowledge-gitops/backend/search-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: search-server
spec:
    selector:
        app: search-server
    ports:
        - port: 8002
          targetPort: 8002
    type: ClusterIP
