oss-knowledge-gitops/backend/search-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: search-server
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - host: oss-knowledge-search.4.230.158.187.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: search-server
                            port:
                                number: 8002
